# hackerman

./: .gitignore  Cargo.toml  Dockerfile  README.md  cmdmap.json  docker-entrypoint.sh
.github/: FUNDING.yml
.github/workflows/: docker_img.yml
src/: main.rs
src/discord/: cmdmap.rs  cmdutil.rs  event_handler.rs  interact_dispatch.rs  mod.rs
src/discord/handlers/: dns.rs  fakepng.rs  gitsnip.rs  gtfo.rs  imgify.rs  minecraft.rs  mod.rs  rfc.rs  rickroll.rs  self_info.rs  spacex.rs  uwu.rs
