[package]
name = "hackerman"
publish = false
version = "0.1.0"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2018"
description = "The NWnD Discord bot"
documentation = "https://docs.rs/hackerman"
readme = "README.md"
homepage = "https://github.com/ewpratten/hackerman"
repository = "https://github.com/ewpratten/hackerman"
license = "GPL-3.0"
keywords = []
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serenity = { git = "https://github.com/serenity-rs/serenity", verison = "0.10", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "unstable_discord_api"
] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
clap = "2.33"
urlencoding = "2.1"
log = "0.4"
env_logger = "0.9"
dns-lookup = "1.0"
async-minecraft-ping = "0.4"
failure = "0.1"
chrono = "0.4"