[package]
name = "hackerman"
publish = false
version = "0.1.0"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2018"
description = "The NWnD Discord bot"
documentation = "https://docs.rs/hackerman"
readme = "README.md"
homepage = "https://github.com/ewpratten/hackerman"
repository = "https://github.com/ewpratten/hackerman"
license = "GPL-3.0"
keywords = []
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "current", version = "0.10", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "unstable_discord_api",
    "builder",
    "cache",
    "http",
    "utils"
] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
clap = "2.33"
urlencoding = "2.1"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.2"
dns-lookup = "1.0"
async-minecraft-ping = "0.4"
chrono = "0.4"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
autojson = "0.1"
cfg-if = "1.0"
songbird = "0.2"
serenity_utils = "0.6"
reqwest = "0.11"
regex = "1"
rfclib = "0.1"
git2codeblock = "0.1"
thiserror = "1.0"
uwuify = "0.2"
rippl = "0.2"
url = "2.2"
image = "0.23"
falsepng = "0.1"
